CHANGES to BioNetGen
updated 14 March 2015
http://code.google.com/p/bionetgen

== BioNetGen-2.2.6-stable ==

==== Bug Fixes ====
* An error is now thrown if an unrecognized block name is encountered.

== BioNetGen-2.2.6-testing ==
'''''2015 March 3'''''

==== New Features ====

===== SBML-to-BNGL Translator =====
* The SBML-to-BNGL translator can perform both a flat (one-to-one) translation 
of an SBML model in terms of unstructured species and an "atomized" translation 
that recovers the implicit molecular structure (binding sites and states) of the 
species within the model. The translator can be accessed in the following three ways:
# Using the readFile() BioNetGen action: The 'atomize' argument specifies whether a 
flat or atomized translation is to be performed (default is flat, i.e., 
<big><tt>atomize=>0</tt></big>). The translated model is written to [sbml_filename].bngl, 
which is then read and loaded into memory. This allows additional actions [e.g., simulate(), 
parameter_scan()] to be performed on the model if desired.  See the 
[[BioNetGen_Actions_and_Arguments | BioNetGen Actions & Arguments Guide]] for a comprehensive 
listing of all actions and arguments, including readFile().
# Running the <big><tt>[BNGPATH]/bin/sbmlTranslator</tt></big> executable directly: 
This provides the functionality described above along with additional customization flags. 
Run <big><tt>./sbmlTranslator --help</tt></big> for a complete list of options with descriptions.
# As a standalone web application at [http://ratomizer.appspot.com/translate http://ratomizer.appspot.com/translate].

For further information, see the [[SBML2BNGL | SBML-to-BNGL documentation]].

===== Visualization Tools =====
* Visualization tools can be accessed by calling the visualize() action in a BNGL model file 
or running the <big><tt>visualize.pl</tt></big> script included in 
<big><tt>[BNGPATH]/Perl2/Visualization</tt></big>. The output is generated in Graph Modeling 