@@ -6,6 +6,9 @@ http://code.google.com/p/bionetgen
 
 ==== Bug Fixes ====
 * An error is now thrown if an unrecognized block name is encountered.
+* An error is now thrown if duplicate rule names are detected.
+
+==== Minor Changes ====
 
 == BioNetGen-2.2.6-testing ==
 '''''2015 March 3'''''
